file rewrite for better readness

--- a/Apps/zap_em_massa.ipynb
+++ b/Apps/zap_em_massa.ipynb
@@ -24,37 +24,26 @@
     "import time\n",
     "import pyperclip\n",
     "\n",
-    "numero = '19991768467'\n",
-    "\n",
-    "# Função para criar contatos no WhatsApp Web\n",
-    "def criar_contato(nome, numero):\n",
-    "    # Abre a página para criar um novo contato\n",
-    "    driver.get(\"https://web.whatsapp.com/send?phone=\" + str(numero))\n",
-    "\n",
-    "    # Espera um pouco para o carregamento da página\n",
-    "    time.sleep(5)\n",
-    "\n",
     "# Inicializa o navegador (use o driver correto para o seu navegador)\n",
     "driver = webdriver.Chrome()  # Ou webdriver.Firefox()\n",
     "\n",
     "# Abre o WhatsApp Web\n",
     "driver.get(\"https://web.whatsapp.com/\")\n",
-    "input(\"Escaneie o código QR do WhatsApp e pressione Enter após o login...\")\n"
+    "input(\"Escaneie o código QR do WhatsApp e pressione Enter após o login...\")\n",
+    "\n",
+    "mensagem = \"\"\"Boa tarde, tudo bom?\n",
+    "\"\"\"\n",
+    "pyperclip.copy(mensagem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mensagem = \"\"\"Boa tarde, tudo bom? \n",
-    "Vocês trabalham com procedimentos que envolvem anestesia? \n",
-    "Meu nome é Rodrigo, e trabalho em parceria com 2 anestesistas volante que atuam na região de Campinas. \n",
-    "Caso haja interesse em conhecer melhor o trabalho deles, me manda um oi que a gente combina uma visita ^^ \n",
-    "Obrigado pela atenção \n",
-    "\"\"\"\n",
-    "pyperclip.copy(mensagem)"
+    "### ESSE CÓDIGO SUPÕE A EXISTENCIA DE UM ARQUIVO contatosZap.csv, que contém os numeros dos telefones que receberao mensagens whatsapp.\n",
+    "### esse arquivo pode ser criado utilizando google_maps_crawler.ipynb, através do crawleamento de informações e posterior isolamento dos numeros whatsapp\n"
    ]
   },
   {
@@ -174,16 +163,13 @@
     }
    ],
    "source": [
+    "#loop que envia as mensagens para cada numero da colune 'telefone' de df\n",
     "for t in df.telefone:\n",
     "    print(t)\n",
-    "    nome = 'abacaxi'\n",
     "    driver.get(\"https://web.whatsapp.com/send?phone=\" + str(t))\n",
     "    # Envia a mensagem\n",
     "    time.sleep(20)\n",
     "    message_box = driver.find_element(By.XPATH,'/html/body/div[1]/div/div/div[2]/div[4]/div/footer/div[1]/div/span[2]/div/div[2]/div[1]')\n",
-    "    from selenium.webdriver.common.action_chains import ActionChains\n",
-    "    # ActionChains(driver).key_down(Keys.CONTROL).send_keys('v').key_up(Keys.CONTROL).perform()\n",
-    "    # message_box.send_keys()\n",
     "    message_box.click()\n",
     "    time.sleep(1)\n",
     "    ActionChains(driver).key_down(Keys.CONTROL).send_keys('v').key_up(Keys.CONTROL).perform()\n",
@@ -191,25 +177,6 @@
     "    message_box.send_keys(Keys.ENTER)\n",
     "    # Espera um pouco antes de enviar a próxima mensagem\n",
     "    time.sleep(2)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "driver.get(\"https://web.whatsapp.com/send?phone=\" + str(19991768467))\n",
-    "\n",
-    "time.sleep(20)\n",
-    "message_box = driver.find_element(By.XPATH,'/html/body/div[1]/div/div/div[2]/div[4]/div/footer/div[1]/div/span[2]/div/div[2]/div[1]')\n",
-    "from selenium.webdriver.common.action_chains import ActionChains\n",
-    "# ActionChains(driver).key_down(Keys.CONTROL).send_keys('v').key_up(Keys.CONTROL).perform()\n",
-    "# message_box.send_keys()\n",
-    "message_box.click()\n",
-    "ActionChains(driver).key_down(Keys.CONTROL).send_keys('v').key_up(Keys.CONTROL).perform()\n",
-    "message_box.send_keys(Keys.ENTER)\n",
     "\n"
    ]
   }
